--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
    <section>
         <Header>
-            
+            <div class="header-logo">
+                <img src="./images/logo-menu@2x.png" alt="">
+            </div>
+
+            <div class="nav-menu">
+                <div class="nav-menu-item"><a href="">HOMEPAGE</a></div>
+                <div class="nav-menu-item"><a href="">PRICING</a></div>
+                <div class="nav-menu-item"><a href="">DOCS</a></div>
+                <div class="nav-menu-item"><a href="">LOGIN</a></div>
+                <div class="nav-menu-item"><button>Sign Up</button></div>
+            </div>
         </Header>
+        
    </section>
 </body>
 </html>
