<div class="nav-menu-item"><a href="">HOMEPAGE</a></div>
 <div class="nav-menu-item"><a href="">HOMEPAGE</a></div>

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </div>
 
             <div class="nav-menu">
+                 <div class="nav-menu-item"><a href="">HOMEPAGE</a></div>
                 <div class="nav-menu-item"><a href="">HOMEPAGE</a></div>
                 <div class="nav-menu-item"><a href="">PRICING</a></div>
                 <div class="nav-menu-item"><a href="">DOCS</a></div>
